--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./mnd.css">
+    <title>Pronia</title>
+    <!-- static files -->
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!-- property start -->
-    <div class="propery">
-        <div class="propery-box">
-            <img src="../img/image 33.png" alt="">
+
+    <nav>
+        <div class="logo">
+            <img src="../img/image 33.png" alt="error">
         </div>
-        <div class="propery-box">
+        <div class="nav-box">
             <ul>
                 <li>Home</li>
                 <li>About Us</li>
@@ -30,19 +35,23 @@
                 <li><ion-icon name="bag-outline"></ion-icon></li>
             </ul>
         </div>
-    </div>
+    </nav>
+
     <!-- property end -->
 
+
+
     <!-- nice start -->
-    <div class="nice">
-        <div class="nice-box1">
+
+    <div class="main">
+        <div class="main-img">
             <img src="../img/588-5882616_ficus-audrey-large-rubber-plant-ficus-houseplants-ficus.png" alt="">
         </div>
-        <div class="nice-box">
+        <div class="main-txt">
             <h1>Proper greening &
-                smart solutions. be 
-                nice to them</h1> 
-            <p>It is a long established fact that a reader 
+                smart solutions. be
+                nice to them</h1>
+            <p>It is a long established fact that a reader
                 will be distracted by the readable.</p>
             <button><span>Join Now</span><ion-icon name="chevron-forward-outline"></ion-icon></button>
         </div>
@@ -50,22 +59,24 @@
 
     <!-- nice end -->
 
+
+
     <!-- trees start -->
 
-    <div class="trees">
-        <div class="trees-box">
+    <div class="sliders">
+        <div class="slider-box">
             <img src="../img/1 (2).png" alt="">
             <p>Chinese Swamp Cypress</p>
         </div>
-        <div class="trees-box">
+        <div class="slider-box">
             <img style="margin-left: 20px;" src="../img/2.png" alt="">
             <p>Black Mangrove Tree</p>
         </div>
-        <div class="trees-box">
+        <div class="slider-box">
             <img style="margin-left: -20px;" src="../img/3.png" alt="">
             <p>Cabbage Trees</p>
         </div>
-        <div class="trees-box1">
+        <div class="slider-icon">
             <div class="icon">
                 <ion-icon name="arrow-forward-circle-outline"></ion-icon>
             </div>
@@ -78,7 +89,9 @@
     <!-- trees start -->
 
 
-    <!-- our card -->
+
+
+    <!-- our-card start -->
 
     <div class="our-card">
         <h1>Our Benefits</h1>
@@ -106,28 +119,30 @@
         </div>
     </div>
 
-    <div class="about-card">
+    <!-- our-card end -->
 
-        <div class="about">
-            <div class="about-box">
-                <img src="../img/image 23.png" alt="">
-            </div>
-            <div class="about-box">
-                <h1>About Our <br>
-                    tree plantation</h1> <br>
-                <p>Some patients may wonder how to make a doctor’s appointment by text. <br>
-                    To make it easy, doctors’ offices can simply update their website and <br>
-                    telephone on hold message to let patients know they can schedule an <br>
-                    appointment using SMS. After an appointment has been made,</p>
 
-                <button><span>Read More</span></button>
-            </div>
+    <!-- about-card start -->
+
+    <div class="trees">
+        <div class="about-box">
+            <img src="../img/image 23.png" alt="error">
         </div>
-
-
-
+        <div class="trees-txt">
+            <h1>About Our
+                tree plantation</h1>
+            <p>Some patients may wonder how to make a doctor’s appointment by text. To make it easy, doctors’ offices
+                can simply update their website and telephone on hold message to let patients know they can schedule an
+                appointment using SMS. After an appointment has been made,</p>
+            <button><span>Read More</span></button>
+        </div>
     </div>
 
+    <!-- about-card end -->
+
+
+
+    <!-- best-card start -->
 
     <div class="best-card">
         <h1 style="padding: 20px;">Best Selling Trees</h1> <br>
@@ -168,6 +183,11 @@
         </div>
     </div>
 
+    <!-- best-card end -->
+
+
+
+    <!-- servise-card start -->
 
     <div class="servise-card">
         <h1 style="color: #030C0C; text-align: center; font-size: 50px;font-family: Poppins; ">Our Service</h1>
@@ -205,6 +225,11 @@
         </div>
     </div>
 
+    <!-- servise-card end -->
+
+
+
+    <!-- input-div start -->
 
     <div class="input-div">
         <h1>Best Selling Trees</h1>
@@ -214,7 +239,11 @@
         </div>
     </div>
 
+    <!-- input-div end -->
 
+
+
+    <!-- footer start -->
 
     <footer>
         <div class="pron-ftr">
@@ -277,40 +306,9 @@
         </div>
     </footer>
 
+    <!-- footer end -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- js  -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
