--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
         <h1>Our Benefits</h1>
         <div class="our">
             <div class="our-box">
-                <img src="../img/Group 1000002898.png" alt=""> <br> <br> <br>
-                <p>It is a long established fact that a <br>
-                    reader will be distracted by the <br>
+                <img src="../img/Group 1000002898.png" alt="">
+                <p>It is a long established fact that a
+                    reader will be distracted by the
                     readable.</p>
             </div>
             <div class="our-box">
                 <img src="../img/Group 1000002900.png" alt="">
                 <h2>Free Shipping</h2>
-                <p>It is a long established fact that a <br>
-                    reader will be distracted by the <br>
+                <p>It is a long established fact that a
+                    reader will be distracted by the
                     readable.</p>
             </div>
             <div class="our-box">
                 <img src="../img/Component 1.png" alt="">
                 <h2>Best Services</h2>
-                <p>It is a long established fact that a <br>
-                    reader will be distracted by the <br>
+                <p>It is a long established fact that a
+                    reader will be distracted by the
                     readable.</p>
             </div>
         </div>
@@ -145,15 +145,14 @@
     <!-- best-card start -->
 
     <div class="best-card">
-        <h1 style="padding: 20px;">Best Selling Trees</h1> <br>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis <br>
+        <h1 style="padding: 20px;">Best Selling Trees</h1>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
             praesentium voluptatum deleniti atque corrupti quos dolores</p>
-
         <div class="best">
             <div class="best-box">
-                <img src="../img/Group 1000002926.png" alt=""> <br> <br><br>
+                <img src="../img/Group 1000002926.png" alt="error">
                 <h2>Delightful Dieffenbachia</h2>
-                <p>It is a long established fact that <br>
+                <p>It is a long established fact that
                     a reader will be distracted.</p>
                 <div class="btn">
                     <h3>$54.70</h3>
@@ -161,9 +160,9 @@
                 </div>
             </div>
             <div class="best-box">
-                <img style="margin-left: 70px;" src="../img/Group 1000002925.png" alt="">
+                <img style="margin-left: 70px;" src="../img/Group 1000002925.png" alt="error">
                 <h2>Delightful Dieffenbachia</h2>
-                <p>It is a long established fact that <br>
+                <p>It is a long established fact that
                     a reader will be distracted.</p>
                 <div class="btn">
                     <h3>$54.70</h3>
@@ -171,9 +170,9 @@
                 </div>
             </div>
             <div class="best-box">
-                <img src="../img/Group 1000002927.png" alt=""> <br> <br> <br>
+                <img src="../img/Group 1000002927.png" alt="">
                 <h2>Delightful Dieffenbachia</h2>
-                <p>It is a long established fact that <br>
+                <p>It is a long established fact that
                     a reader will be distracted.</p>
                 <div class="btn">
                     <h3>$54.70</h3>
