--- a/index.html
+++ b/index.html
@@ -189,21 +189,21 @@
     <!-- servise-card start -->
 
     <div class="servise-card">
-        <h1 style="color: #030C0C; text-align: center; font-size: 50px;font-family: Poppins; ">Our Service</h1>
-        <p style="color:#666666; text-align: center;font-size: 25px; line-height: 1.5; font-family: serif;">At vero eos
-            et accusamus et iusto odio dignissimos ducimus qui blanditiis <br>
+        <h1 style="color: #030C0C; text-align: center;">Our Service</h1>
+        <p style="color:#666666; text-align: center;font-size: 16px;">At vero eos
+            et accusamus et iusto odio dignissimos ducimus qui blanditiis 
             praesentium voluptatum deleniti atque corrupti quos dolores</p>
         <div class="servise">
             <div class="servise-box">
                 <h2>Tree Planting</h2>
-                <p>Lorem ipsum dolor sit amet, consectet <br>
-                    micongue kladipiscing hlelit. Donec ut <br>
+                <p>Lorem ipsum dolor sit amet, consectet 
+                    micongue kladipiscing hlelit. Donec ut 
                     diam pulvinar,</p>
                 <h2>Land Scaping Design</h2>
-                <p>It is a long established fact that a reader <br>
+                <p>It is a long established fact that a reader
                     will be distracted by the readable.</p>
                 <h2>Rush Removal</h2>
-                <p>It is a long established fact that a reader <br>
+                <p>It is a long established fact that a reader 
                     will be distracted by the readable.</p>
             </div>
             <div class="servise-box">
@@ -211,14 +211,14 @@
             </div>
             <div class="servise-box">
                 <h2>Garden Watering</h2>
-                <p>Lorem ipsum dolor sit amet, consectet <br>
-                    micongue kladipiscing hlelit. Donec ut <br>
+                <p>Lorem ipsum dolor sit amet, consectet 
+                    micongue kladipiscing hlelit. Donec ut
                     diam pulvinar,</p>
                 <h2>Planting Flower</h2>
-                <p>It is a long established fact that a reader <br>
+                <p>It is a long established fact that a reader 
                     will be distracted by the readable.</p>
                 <h2>Rush Removal</h2>
-                <p>It is a long established fact that a reader <br>
+                <p>It is a long established fact that a reader 
                     will be distracted by the readable.</p>
             </div>
         </div>
