--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pronia</title>
     <!-- static files -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- google fonts -->
